# TransMultiRank

./: .gitignore  Doc2Vec.ipynb  README.md  cli.py  dockerfile  pyproject.toml
TransMultiRank/: __main__.py  cli.py
exercice/: tfidf_implementation.ipynb
transformer-doc-ranker/: __init__.py  cli.py
